Adjusted input border ternary to only show green or red when a value is present, else no color; switched input border to background-color to make the red/incorrect and green/correct answers more obvious and to keep input from shifting position due to border pixels shifting the inputs left and right; adjust header margin; adjust input outline colors to black

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -15,7 +15,7 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 20px 0;
+  padding: 20px 0 10px 0;
   background-color: rgba(239, 201, 90, 1);
 }
 
@@ -91,6 +91,10 @@ label {
   background-color: #f1f2f2;
 }
 
+label:hover {
+  opacity: .75;
+}
+
 label:active {
   box-shadow: 0 0 1px black;
 }
@@ -100,8 +104,9 @@ input.note {
   width: 55px;
   padding: 5px;
   text-align: center;
-  border-style: solid;
+  box-shadow: inset 0 1px 0 rgba(0, 0, 0, .15);
 }
+
 
 input::placeholder {
   position: relative;
@@ -111,9 +116,11 @@ input::placeholder {
 }
 
 .green {
-  border: 3px solid #8ba532; /*green*/
+  background-color: #8ba532; /*green*/
+  color: #FFF;
 }
 
 .red {
-  border: 3px solid #d77777; /*red*/
+  background-color: #e06a6a; /*red*/
+  color: #FFF;
 }
